Fix overflow on board rendering

--- a/public/source/styles/index.css
+++ b/public/source/styles/index.css
@@ -1,6 +1,8 @@
 html {
   height:100%;
   width:100%;
+  margin:0;
+  padding:0;
 }
 
 body {
@@ -41,6 +43,7 @@ body {
   height: 100%;
   border:none;
   outline:none;
+  margin-bottom: -5px;
 }
 
 iframe:focus {
