--- a/public/source/styles/nav.css
+++ b/public/source/styles/nav.css
@@ -6,6 +6,10 @@
   box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
 }
 
+.nav-absolute {
+  position: absolute;
+}
+
 .nav-title {
   display: inline;
   margin: 0;
